# slime

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ubuntu.yml
slime/: CMakeLists.txt
slime/assets/shaders/: clear_lattice.comp  clear_trail_map.comp  decay.comp  quad.frag  quad.vert  slime.comp  trail_map.comp
slime/src/: main.cpp
slime/src/slime/: Shader.hpp  ShaderProgram.h  Slime.cpp  Slime.hpp  precompiled.hpp
